--- a/src/web/package.json
+++ b/src/web/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
