--- a/src/web/package.json
+++ b/src/web/package.json
@@ -9,12 +9,14 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
