--- a/src/web/package.json
+++ b/src/web/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.0",
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.0",
+    "@types/recharts": "^1.8.23",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "firebase": "^9.8.2",
@@ -21,6 +22,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.12",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
