--- a/src/web/package.json
+++ b/src/web/package.json
@@ -20,6 +20,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-resize-detector": "^7.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.12",
